<resources>
    <string name="screen_home">Home</string>
    <string name="screen_inst_1">Instructions 1</string>
    <string name="screen_video">Video</string>
    <string name="screen_keyboard">Keyboard</string>
    <string name="screen_inst_2">Instructions 2</string>
    <string name="screen_education">Education</string>
    <string name="screen_date">Date</string>
    <string name="screen_day">Day of Week</string>
    <string name="screen_season">Season</string>
    <string name="screen_inst_3">Instructions 3</string>
    <string name="screen_reaction">Reaction</string>
    <string name="screen_inst_4">Instructions 4</string>
    <string name="screen_verbal_1">Verbal Learning 1</string>
    <string name="screen_recall_1">Verbal Recall 1</string>
    <string name="screen_inst_5">Instructions 5</string>
    <string name="screen_verbal_2">Verbal Learning 2</string>
    <string name="screen_recall_2">Verbal Recall 2</string>
    <string name="screen_inst_6">Instructions 6</string>
    <string name="screen_verbal_3">Verbal Learning 3</string>
    <string name="screen_recall_3">Verbal Recall 3</string>
    <string name="screen_inst_7">Instructions 7</string>
    <string name="screen_verbal_4">Verbal Learning 4 (Interference)</string>
    <string name="screen_recall_4">Verbal Recall 4</string>
    <string name="screen_inst_8">Instructions 8</string>
    <string name="screen_recall_5">Verbal Recall 5 (Short Delay)</string>
    <string name="screen_inst_9">Instructions 9</string>
    <string name="screen_img_nm">Image Naming</string>
    <string name="screen_inst_10">Instructions 10</string>
    <string name="screen_fig_study">Figure Study</string>
    <string name="screen_fig_select">Figure Select 1</string>
    <string name="screen_inst_11">Instructions 11</string>
    <string name="screen_read_comp_story">Story Learning</string>
    <string name="screen_inst_12">Instructions 12</string>
    <string name="screen_semantic_choice">Semantic Choice</string>
    <string name="screen_inst_13">Instructions 13</string>
    <string name="screen_recall_6">Verbal Recall 6 (Long Delay)</string>
    <string name="screen_inst_14">Instructions 14</string>
    <string name="screen_verbal_rec">Verbal Recognition</string>
    <string name="screen_inst_15">Instructions 15</string>
    <string name="screen_fig_select_2">Figure Select 2</string>
    <string name="screen_inst_16">Instructions 16</string>
    <string name="screen_read_comp_test">Story Memory</string>
    <string name="screen_inst_17">Instructions 17</string>
    <string name="screen_semantic_relatedness">Semantic Relatedness</string>
    <string name="screen_digit_span">Digit Span</string>
    <string name="screen_computation">Computation</string>
    <string name="screen_inst_18">Instructions 18</string>
    <string name="screen_inst_19">Instructions 19</string>
    <string name="screen_finish">Finish</string>
    <string name="app_name">RIMCAT</string>
    <string name="error">Error</string>
    <string name="Null">Null</string>
    <string name="next_text">Next</string>
    <string name="home_patientID">Patient ID</string>
    <string name="instructions_appInst">
        &#8226; First, I am going to ask you to answer some questions.
        \n\n&#8226; Remember to press the \"Next\" button at the bottom right of the screen to continue.
    </string>
    <string name="instructions_buttonInst">After you\'re finished, press this button to move on.</string>
    <string name="name_prompt">What is your full name?</string>
    <string name="name_firstName">First Name</string>
    <string name="name_lastName">Last Name</string>
    <string name="age_prompt">How old are you?</string>
    <string name="age_input">Age</string>
    <string name="birthday_prompt">What is your birthday?</string>
    <string name="birthday_month">MM</string>
    <string name="birthday_day">DD</string>
    <string name="birthday_year">YYYY</string>
    <string name="education_prompt">What is your highest level of education?</string>
    <string-array name="education_array">
        <item></item>
        <item>No formal education</item>
        <item>GED</item>
        <item>High School Graduate</item>
        <item>Vocational Training</item>
        <item>Community College / 2-Year Degree</item>
        <item>University / 4-Year Degree</item>
        <item>Master\'s Degree</item>
        <item>Doctorate Degree (e.g., MD, JD, PhD)</item>
    </string-array>
    <string name="today_prompt">Without looking at a calendar, type TODAY\'s date</string>
    <string name="day_of_week_prompt">What day of the week is it?</string>
    <string-array name="day_of_week_array">
        <item></item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="season_prompt">What season of the year is it?</string>
    <string-array name="season_array">
        <item></item>
        <item>Winter</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
    </string-array>
    <string name="instructions_verbalInst">
        \u2022 \t You will be presented with a list of words one at a
        \t time. Read and listen to each word carefully to
        \n \t remember it.
        \n \n
        \u2022\u0020\u0020Once the list is complete, you will be asked to
        \n \t recall as many words as you can remember.
        \n \n
        \u2022\u0020\u0020It does not matter in what order you recall them.
        \n \t Just try to remember as many as you can.
    </string>
    <string name="instructions_verbalInst2">
        \u2022\tNow you will see the same list
        \n\tagain. \n \n
        \u2022\u0020Please remember as many words
        \n\t as you can, in any order, whether
        \n\t or not you said them before.
    </string>
    <string name="instructions_verbalInst3">
        \u2022\tNow you will be presented with a new list of words. Read and listen to each word carefully and try to remember it. \n\n
        \u2022\tOnce the list is complete, you will be asked to recall as many words from this new list as you can. \n\n
        \u2022\tIt does not matter in what order you recall the words. Just try to remember as many as you can.
    </string>
    <string name="instructions_verbalInst4">
        \u2022\tNow, please recall as many words from the first list as you can. \n\n
        \u2022\tAgain, the order in which you recall the words does not matter. Just try to remember as many as you can.
    </string>
    <string name="instructions_verbalInst5">
        \u2022\tDo you remember the lists of words that you saw a while ago? Please recall as many words from the first list as you can, the one you saw several times.\n\n
        \u2022\tThe order in which you recall the words does not matter. Just try to remember as many as you can.
    </string>
    <string name="verbal_readyBtn">Ready</string>
    <string name="verbal_readyPrompt">Press the button below when you are ready to start.</string>
    <string name="vresponse_prompt">
        Now type in all the words you can remember or press the microphone button to record them. Just try your best to recall as many as you can.
    </string>
    <string name="keyboard_addBtn">Submit Word</string>
    <string name="vresponse_addBtn">Enter Next Word</string>
    <string name="vresponse_doneRecalling">Done Recalling</string>
    <string name="vresponse_recallHint">Type Word</string>
    <string name="vresponse_message1">Can you remember any others? Keep trying for a little longer!</string>
    <string name="vresponse_message2">Are you sure you want to move on?</string>
    <string name="instructions_imageInst">
        Please select the correct name for each object as quickly as you can.
    </string>
    <string-array name="image_name_array">
        <item>Tree</item>
        <item>Bush</item>
        <item>Branch</item>

        <item>Tricycle</item>
        <item>Bicycle</item>
        <item>Motorcycle</item>

        <item>Hut</item>
        <item>House</item>
        <item>Shed</item>

        <item>Butterfly</item>
        <item>Caterpillar</item>
        <item>Fly</item>

        <item>Zebra</item>
        <item>Horse</item>
        <item>Giraffe</item>

        <item>Kayak</item>
        <item>Canoe</item>
        <item>Ship</item>

        <item>Banana</item>
        <item>Pear</item>
        <item>Apple</item>

        <item>Rhinoceros</item>
        <item>Wildebeest</item>
        <item>Hippopotamus</item>

        <item>Cantaloupe</item>
        <item>Pumpkin</item>
        <item>Watermelon</item>

        <item>Daisy</item>
        <item>Tulip</item>
        <item>Rose</item>

        <item>Jackfruit</item>
        <item>Grapefruit</item>
        <item>Starfruit</item>

        <item>Harmonica</item>
        <item>Saxophone</item>
        <item>Accordion</item>
    </string-array>
    <string name="instructions_figure_study">
        \u2022 \t You will now be shown a series of figures, then you will have to select each figure that you saw.\n\n
        \u2022 \t You will have 6 seconds to study each figure, and you\'ll have to remember them later.
    </string>
    <string name="figure_select_prompt">Select the correct figure that you have seen before.</string>
    <string name="instructions_read_comp_story">
        Next, you will hear a short story. You will be asked questions about this story later.
    </string>
    <string name="instructions_read_comp_test">
        Please answer the following questions about the story you heard earlier.
    </string>
    <string name="reading_comp_prompt_1">
        On Monday morning, Sarah drove her new car to work. During lunch, she
        drove to the store to purchase groceries.
    </string>
    <string name="reading_comp_prompt_2">
        In the parking lot she ran into her
        friend, Maria. Distracted by the conversation, she left the full and unsecured
        bag of groceries in the backseat.
    </string>
    <string name="reading_comp_prompt_3">
        Driving back, she halted to a stop and the
        groceries went flying. The brand new floor mats were covered with 8 broken
        eggs and half of a carton of blueberries.
    </string>
    <string name="reading_comp_prompt_4">
        Remember, you will be asked to recall details from this story later, so try to remember it as best as you can!
    </string>
    <string name="reading_comp_instr">
        Press the correct response to the question about the story.
    </string>
    <string-array name="reading_comp_questions">
        <item><b>The story begins on:</b></item>
        <item><b>Is the story is about a woman who meets a friend for lunch?</b></item>
        <item><b>The main character’s name was:</b></item>
        <item><b>Did the woman run into her friend in the parking lot?</b></item>
        <item><b>When did the main character go to the store?</b></item>
        <item><b>Is the story is about a woman who ran over her groceries?</b></item>
        <item><b>The woman\'s bag was not secure because:</b></item>
        <item><b>What was broken?</b></item>
        <item><b>How many eggs were broken?</b></item>
        <item><b>What fruit did the woman see on the floor mat?</b></item>
    </string-array>
    <string name="reading_yes">Yes</string>
    <string name="reading_no">No</string>
    <string name="finish_line1">Thank you for your time!</string>
    <string name="finish_line2">You may now quit the application.</string>
    <string name="finish_quit">Quit</string>
</resources>