<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/screen_home_om"
        android:title="@string/screen_home"/>
    <item
        android:id="@+id/screen_inst_1_om"
        android:title="@string/screen_inst_1"/>
    <item
        android:id="@+id/screen_education_om"
        android:title="@string/screen_education"/>
    <item
        android:id="@+id/screen_date_om"
        android:title="@string/screen_date"/>
    <item
        android:id="@+id/screen_day_om"
        android:title="@string/screen_day"/>
    <item
        android:id="@+id/screen_season_om"
        android:title="@string/screen_season"/>
    <item
        android:id="@+id/screen_inst_2_om"
        android:title="@string/screen_inst_2"/>
    <item
        android:id="@+id/screen_verbal_1_om"
        android:title="@string/screen_verbal_1"/>
    <item
        android:id="@+id/screen_recall_1_om"
        android:title="@string/screen_recall_1"/>
    <item
        android:id="@+id/screen_inst_3_om"
        android:title="@string/screen_inst_3"/>
    <item
        android:id="@+id/screen_verbal_2_om"
        android:title="@string/screen_verbal_2"/>
    <item
        android:id="@+id/screen_recall_2_om"
        android:title="@string/screen_recall_2"/>
    <item
        android:id="@+id/screen_inst_4_om"
        android:title="@string/screen_inst_4"/>
    <item
        android:id="@+id/screen_img_nm_om"
        android:title="@string/screen_img_nm"/>
    <item
        android:id="@+id/screen_inst_5_om"
        android:title="@string/screen_inst_5"/>
    <item
        android:id="@+id/screen_fig_study_om"
        android:title="@string/screen_fig_study"/>
    <item
        android:id="@+id/screen_fig_select_om"
        android:title="@string/screen_fig_select"/>
    <item
    android:id="@+id/screen_inst_6_om"
    android:title="@string/screen_inst_6"/>

    <item
        android:id="@+id/screen_read_comp"
        android:title="@string/screen_read_comp"/>

</menu>