<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/birthday_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="335dp"
        android:layout_marginLeft="335dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="337dp"
        android:layout_marginRight="337dp"
        android:text="@string/birthday_prompt"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_day"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/birthday_day"
        android:background="@color/white"
        android:inputType="date"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_prompt" />

    <EditText
        android:id="@+id/input_year"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/birthday_year"
        android:background="@color/white"
        android:inputType="date"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/input_day"
        app:layout_constraintTop_toBottomOf="@+id/birthday_prompt" />

    <EditText
        android:id="@+id/input_month"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/birthday_month"
        android:background="@color/white"
        android:inputType="date"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/input_day"
        app:layout_constraintTop_toBottomOf="@+id/birthday_prompt" />
</android.support.constraint.ConstraintLayout>