<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/plain_namePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/name_prompt"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="259dp"
        android:layout_marginLeft="259dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="259dp"
        android:layout_marginRight="259dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/name_firstName"
        android:background="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_namePrompt" />

    <EditText
        android:id="@+id/input_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="259dp"
        android:layout_marginLeft="259dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="259dp"
        android:layout_marginRight="259dp"
        android:ems="10"
        android:hint="@string/name_lastName"
        android:background="@color/white"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_firstName" />
</android.support.constraint.ConstraintLayout>