<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vresponse_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="944dp"
        android:layout_height="473dp"
        android:layout_gravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/vresponse_text"
                android:layout_width="645dp"
                android:layout_height="121dp"
                android:layout_gravity="start"
                android:layout_marginStart="228dp"
                android:layout_marginLeft="228dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="227dp"
                android:layout_marginRight="227dp"
                android:text="@string/vresponse_prompt"
                android:textAlignment="textStart"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/vresponse_addBtn"
                android:layout_width="208dp"
                android:layout_height="67dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/roundbutton"
                android:text="@string/vresponse_addBtn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/vresponse_recall_word"
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:ems="10"
                android:hint="@string/vresponse_recallHint"
                android:inputType="textPersonName"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.498" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/recall_audio_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:src="@android:drawable/ic_btn_speak_now"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vresponse_recall_word"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.498" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/done_recalling_btn"
                android:layout_width="307dp"
                android:layout_height="67dp"
                android:layout_marginBottom="38dp"
                android:background="@drawable/roundbutton"
                android:padding="10dp"
                android:text="@string/vresponse_doneRecalling"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>