<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vresponse_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="630dp"
        android:layout_height="337dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/vresponse_text"
                android:layout_width="500dp"
                android:layout_height="146dp"
                android:layout_marginStart="228dp"
                android:layout_marginLeft="228dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="227dp"
                android:layout_marginRight="227dp"
                android:layout_marginBottom="8dp"
                android:text="@string/vresponse_prompt"
                android:textAlignment="center"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.222" />

            <Button
                android:id="@+id/vresponse_addBtn"
                android:layout_width="153dp"
                android:layout_height="65dp"
                android:layout_marginTop="113dp"
                android:layout_marginEnd="41dp"
                android:layout_marginRight="41dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                android:text="@string/vresponse_addBtn"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/vresponse_recall_word"
                android:layout_width="239dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/vresponse_recallHint"
                android:inputType="textPersonName"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/vresponse_addBtn"
                app:layout_constraintHorizontal_bias="0.304"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <ListView
        android:id="@+id/vresponse_list"
        android:layout_width="234dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>